# python-matlab-ray-example

./: .gitignore  Makefile  README.md  describe_tags.py  pyproject.toml  ray_matlab_config.yaml  test_matlab.py
.devcontainer/: devcontainer.json
remote_project/: multiple_matlab.py  parallel_simulation.py  test_simulink.py
remote_project/matlab_example/: simulator.py
remote_project/matlab_example/core/: __init__.py  observation.py  parameter.py  search_space.py  signal.py  valuation.py
remote_project/matlab_example/matlab_engine/: __init__.py  context.py  global_engine.py  sessions.py
remote_scripts/: run_matlab.sh  setup_on_remote.sh
